--- a/public/01-about.html
+++ b/public/01-about.html
@@ -695,7 +695,7 @@
 			</header>
 			<!-- end header-->
 			<!-- start sAbout-->
-			<section class="sAbout section" id="sAbout">
+			<section class="sAbout sAbout--js section" id="sAbout">
 				<div class="sAbout__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
 				<div class="container">
@@ -717,7 +717,24 @@
 							</div><a class="sAbout__message-btn" href="#">написать нам</a>
 						</div>
 					</div>
-					<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.jpg" alt=""/>
+					<div class="sAbout__slider-wrap">
+						<div class="swiper-container sAbout-slider-js">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.jpg" alt=""/>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.jpg" alt=""/>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.jpg" alt=""/>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination py-3"></div>
+						</div>
 					</div>
 					<div class="sAbout__pills-row row">
 						<div class="col-sm-6 col-lg-3">
