--- a/public/016-cart.html
+++ b/public/016-cart.html
@@ -711,10 +711,19 @@
 					<div class="sCart__white-box">
 						<div class="row gx-0 align-items-start">
 							<div class="sCart__col sCart__col--left col-lg-8">
-								<div class="sCart__action-row row">
-									<div class="col-auto"><a class="sCart__action" href="#"><span class="sCart__icon"><img loading="lazy" src="img/svg/sCart-action-1.svg" alt=""/></span><span>Очистить корзину</span></a>
+								<div class="tags-row row">
+									<div class="col-auto"><a class="tags-row__tag" href="#"><span class="tags-row__icon"><img loading="lazy" src="img/svg/sCart-action-1.svg" alt=""/></span><span>Очистить корзину</span></a>
 									</div>
-									<div class="col-auto"><a class="sCart__action" href="#"><span class="sCart__icon"><img loading="lazy" src="img/svg/sCart-action-2.svg" alt=""/></span><span>Поделиться корзиной</span></a>
+									<div class="col-auto">
+										<div class="tags-row__tag tags-row__tag--share">
+											<div class="tags-row__share-toggle">
+												<div class="tags-row__icon"><img loading="lazy" src="img/svg/sCart-action-2.svg" alt=""/>
+												</div><span>Поделиться</span>
+											</div>
+											<div class="tags-row__share-dropdown"><script src="https://yastatic.net/share2/share.js"></script>
+<div class="ya-share2" data-curtain data-shape="round" data-services="messenger,vkontakte,facebook,odnoklassniki"></div>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="sCart__items">
@@ -748,7 +757,7 @@
 											<div class="cart-item__col cart-item__col--price col-auto text-xl-start text-end align-self-center align-self-xl-start">
 												<div class="cart-item__price cart-item__price--old">196 990 руб.
 												</div>
-												<div class="cart-item__price cart-item__price--new">189 999 руб.
+												<div class="cart-item__price cart-item__price--new">99 189 999 руб.
 												</div>
 											</div>
 										</div>
