--- a/public/018-lc-orders.html
+++ b/public/018-lc-orders.html
@@ -712,7 +712,7 @@
 						<div class="row gx-0 align-items-start">
 							<div class="sPersonalCab__col sPersonalCab__col--left col-lg-3">
 								<div class="sPersonalCab__top-box">
-									<div class="sPersonalCab__tb-row row">
+									<div class="sPersonalCab__tb-row row gy-3">
 										<div class="col-auto">
 											<div class="sPersonalCab__img"><img loading="lazy" src="img/svg/portrait-stab.svg" alt=""/>
 											</div>
@@ -722,6 +722,8 @@
 											</div>
 											<div class="sPersonalCab__mail">ivanov@yandex.ru
 											</div>
+										</div>
+										<div class="col-auto d-lg-none"><a class="sPersonalCab__mob-quit" href="#">Выход</a>
 										</div>
 									</div>
 								</div>
