--- a/public/019-compare.html
+++ b/public/019-compare.html
@@ -4951,6 +4951,7 @@
 												</div>
 											</div>
 										</div>
+										<div class="swiper-scrollbar"></div>
 									</div>
 								</div>
 							</div>
