--- a/public/017-lc.html
+++ b/public/017-lc.html
@@ -702,7 +702,7 @@
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>Оформление заказа</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Личный кабинет</span></a></li>
 						</ol>
 					</nav>
 					<div class="section-title">
