--- a/public/index.html
+++ b/public/index.html
@@ -1876,38 +1876,47 @@
 					<div class="section-title text-center">
 						<h2>Популярные подборки<br/>бытовой техники</h2>
 					</div>
-					<div class="sTags__row row sTags-row-js justify-content-center">
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
-						</div>
-						<div class="col-sm-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
-						</div>
-						<div class="col-sm-auto d-block">
-							<div class="sTags__btn sTags__btn--toggle sTags-btn-js"><span>Показать все</span><span>Скрыть</span>
+					<div class="tags-slider-wrap">
+						<div class="swiper-container tags-slider-js">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="sTags__row row sTags-row-js justify-content-md-center my-3">
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая техника</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Варочные панели домино</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемая комбинированная панель</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые газовые панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые индукционные панели</a>
+										</div>
+										<div class="col-auto"><a class="sTags__btn sTags__btn--tag" href="#">Встраиваемые электрические панели</a>
+										</div>
+										<div class="col-sm-auto d-block">
+											<div class="sTags__btn sTags__btn--toggle sTags-btn-js"><span>Показать все</span><span>Скрыть</span>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
+							<div class="swiper-scrollbar d-md-none"></div>
 						</div>
 					</div>
 				</div>
