--- a/public/015-filtr-4.html
+++ b/public/015-filtr-4.html
@@ -6,7 +6,8 @@
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
-		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
+		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/><link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
@@ -711,30 +712,39 @@
 							<div class="section-title">
 								<h1>Стиральные машины</h1>
 							</div>
-							<div class="sCatalog__tags-row row sTags-row-js">
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
-								</div>
-								<div class="col-sm-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
-								</div>
-								<div class="col-sm-auto d-block">
-									<div class="sCatalog__btn sCatalog__btn--toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
+							<div class="tags-slider-wrap">
+								<div class="swiper-container tags-slider-js">
+									<div class="swiper-wrapper">
+										<div class="swiper-slide">
+											<div class="sCatalog__tags-row row sTags-row-js">
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины из Германии</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины шириной 55 см</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Узкие стиральные машины</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Стиральные машины под раковину</a>
+												</div>
+												<div class="col-auto"><a class="sCatalog__btn sCatalog__btn--tag" href="#">Угловые стиральные машины</a>
+												</div>
+												<div class="col-sm-auto d-block">
+													<div class="sCatalog__btn sCatalog__btn--toggle sTags-btn-js"><span>Показать еще</span><span>Скрыть</span>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
+									<div class="swiper-scrollbar d-md-none my-3"></div>
 								</div>
 							</div>
 							<div class="sCatalog__img d-none d-lg-flex"><img loading="lazy" src="img/@2x/sCatalog-baner-img.png" alt=""/>
@@ -940,7 +950,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-auto">
+									<div class="col-auto d-none d-md-block">
 										<div class="sCatalog__view-row row">
 											<div class="col-auto"><a class="sCatalog__view-item" href="#">
 												<svg class="icon icon-sort-1 ">
@@ -2454,6 +2464,35 @@
 								<use xlink:href="img/svg/sprite.svg#plus"></use>
 							</svg>
 						</div><span>показать все города</span>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="modal-address" id="modal-address" style="display: none">
+			<div class="form-wrap">
+				<form>
+					<label class="form-wrap__name-label"><span class="form-wrap__input-title">Название</span><input class="form-wrap__name-inp form-control" type="text" value="Моя дача"/>
+					</label>
+					<div class="form-wrap__inp-row row">
+						<div class="col-sm-12">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Улица"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-sm-6">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Дом, корпус"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-sm-6">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Квартира"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-12">
+							<button class="form-wrap__btn" type="submit">Сохранить данные
+							</button>
+						</div>
 					</div>
 				</form>
 			</div>
