--- a/public/019-compare.html
+++ b/public/019-compare.html
@@ -4952,6 +4952,11 @@
 											</div>
 										</div>
 										<div class="swiper-scrollbar"></div>
+										<div class="sCompare__difference">
+											<label class="custom-chb">
+												<input class="invisible" type="checkbox" name="uniq" checked="checked"/><span class="square"></span><span class="txt">Показывать только различия</span>
+											</label>
+										</div>
 									</div>
 								</div>
 							</div>
